@@ -31,6 +31,7 @@ The following bugs are resolved with this release:
   [26248] Incorrect argument types for INLINE_SETXID_SYSCALL
   [26332] Incorrect cache line size load causes memory corruption in memset
   [26383] bind_textdomain_codeset doesn't accept //TRANSLIT anymore
+  [26923] Assertion failure in iconv when converting invalid UCS4 (CVE-2020-29562)
   [26932] libc: sh: Multiple floating point functions defined as stubs only
 
 Security related changes:
